Fix bottom slideshow size and alignment

--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3181,7 +3181,7 @@ form#user-login, form#user-pass {
   }
 }
 
-[data-pane="3201"] {
+[data-pane="3203"] {
   width: 100%;
   max-width: 350px;
   margin: auto;
